Add sync all button

--- a/appwrite.json
+++ b/appwrite.json
@@ -529,7 +529,7 @@
 			"runtime": "deno-2.0",
 			"path": "functions/nadeoAction",
 			"entrypoint": "src/mod.ts",
-			"execute": ["any"],
+			"execute": ["users"],
 			"ignore": ["node_modules", ".npm"],
 			"events": [],
 			"schedule": "",
@@ -578,5 +578,41 @@
 			"name": "default",
 			"enabled": true
 		}
-	]
+	],
+	"settings": {
+		"services": {
+			"account": true,
+			"avatars": true,
+			"databases": true,
+			"locale": true,
+			"health": true,
+			"storage": true,
+			"teams": true,
+			"users": true,
+			"functions": true,
+			"graphql": true,
+			"messaging": true
+		},
+		"auth": {
+			"methods": {
+				"jwt": true,
+				"phone": true,
+				"invites": true,
+				"anonymous": true,
+				"email-otp": true,
+				"magic-url": true,
+				"email-password": true
+			},
+			"security": {
+				"duration": 31536000,
+				"limit": 0,
+				"sessionsLimit": 10,
+				"passwordHistory": 0,
+				"passwordDictionary": false,
+				"personalDataCheck": false,
+				"sessionAlerts": false,
+				"mockNumbers": []
+			}
+		}
+	}
 }
